# pygamma-agreement

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  python-package.yml  test-package.yml  test-pytest.yml  test3.10-pytest.yml
DATA/: 2by1000.txt  2by2000.txt  2by5000.txt  3by100.txt  3by500.txt  5by100.txt  AlexPaulSuzan.csv  AlexPaulSuzanLength100.csv  annotation_dalton.csv  annotation_paul_suzann_alex.csv  annotation_paul_suzann_alex_additional_unit.csv  annotation_paul_suzann_alex_almost_same.csv  annotation_paul_suzann_alex_single_unit_cat.csv  annotation_paul_suzann_alex_single_unit_temp.csv  example_figure10.csv  example_figure19.csv
benchmark/: benchmark.py  records.csv
docs/: requirements.txt
docs/source/: api_reference.rst  changelog.rst  cli.rst  conf.py  how-to-s.rst  index.rst  issues.rst  performance.rst  principles.rst  quickstart.rst  soft-gamma.rst
notebook/: Continuum_test.ipynb  positional_test.ipynb
notebooks/: Example.ipynb  benchmarking.ipynb  fast-gamma-benchmarking.ipynb
paper/: paper.bib  paper.md
pygamma/: __init__.py  alignement.py  alignment.py  cli_apps.py  coninuum.py  continuum.py  dissimilarity.py  gamma.py  notebook.py  numba_utils.py
pygamma_agreement/: __init__.py  alignment.py  cat_dissim.py  cli_apps.py  continuum.py  corpus_shuffling_tool.py  cst.py  dissimilarity.py  gen_continuum.py  notebook.py  numba_utils.py  sampler.py
scripts/: cartesian_numba.py  combi_dis.py  new_implem.py  numba_optim_attempt.py  numba_streaming.py  test_best_align_perf.py  test_cartesian_numba.py
tests/: test_alignement.py  test_cli.py  test_continuum.py  test_cst.py  test_dissimilarity.py  test_edge_case.py  test_fast_gamma.py  test_gamma.py  test_gammas.py  test_sampler.py  test_soft.py  test_units.py
tests/data/: 2by1000.csv  2by2000.csv  (+16 more)
(+3 files in other folders)
